# chem-ml-api

./: .gitignore  README.md  config.example.json  environment.yml  pyproject.toml
chemmlapi/configs/: registry.py
chemmlapi/core/: loader.py  predictor.py  transforms.py
chemmlapi/interfaces/: api.py  parallel.py
examples/: predict_smiles128.sh
tests/: _markers.py  test_api.py  test_loader.py  test_predictor.py  test_registry.py  test_transforms.py
